logs/drift_src_art_painting_model_PACSCNN_4_policy_2_setting_60_schedule_constant_drift_domain_change_2_seed_2_imgsize_128_20250520_201245.log
  File "/home/apiasecz/programming/concept_drift_optimal_adaptation_FL/src/execute/evaluate_policy.py", line 559
    elif self.schedule_type == "decaying_spikes":
    ^^^^
SyntaxError: invalid syntax
